--- a/carrito.html
+++ b/carrito.html
@@ -3,19 +3,30 @@
 
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Molihbi</title>
-    <link rel="stylesheet" href="sass/style.css">
-    <!--MI Css de Sass-->
-    <link rel="stylesheet" href="bootstrap-4.5.2-dist/css/bootstrap.css">
-    <!--Bootstrap Css-->
-    <link rel="shortcut icon" href="img/Favicon.png" type="image/x-icon">
-    <!--Icono del TAB-->
+<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Tienda online de indumentaria, accesorios y articulos de decoración. Ofreciendo desde hace mas de 5 años lo ultimo de la moda Europea. Hacemos envios a todo el pais mediante el correo argentino y ofrecemos un 10% de descuento pagando en efectivo, ubicada en Lomas de Zamora, Buenos Aires, Argentina.">
+  <meta name="keywords"
+    content="Indumentaria, accesorios, decoración, pantalones, fashion, lomas de zamora, almohadones, perfumeria, moda">
+  <title>Molihbi - Tienda Online de Indumentaria</title>
+  <link rel="stylesheet" href="sass/style.css">
+  <!--MI Css de Sass-->
+  <link rel="stylesheet" href="bootstrap-4.5.2-dist/css/bootstrap.css">
+  <!--Bootstrap Css-->
+  <link rel="shortcut icon" href="img/Favicon.png" type="image/x-icon">
+  <!--Icono del TAB-->
 </head>
 
 
 <body>
+
+ <!--Comienzo Banner-->
+ <div class="banner bg-secondary">
+    <p>
+      3 PAGOS SIN INTERES - ENVIOS A TODO EL PAIS
+    </p>
+  </div>
+  <!--Fin del Banner-->
 
     <!--Comienzo NAVBAR-->
     <nav class="navbar">
