--- a/carrito.html
+++ b/carrito.html
@@ -54,7 +54,7 @@
     <!--Comienzo Imagen Carrito-->
 
     <div class="container">
-        <img class="emptyroom" src="img/empty room.jpg" alt="" style="width:100%;">
+        <img class="emptyroom" src="img/empty-room.jpg" alt="" style="width:100%;">
         <p class="centered"> Tu carrito esta vacio </p>
     </div>
 
