--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!--MI Css de Sass-->
   <link rel="stylesheet" href="bootstrap-4.5.2-dist/css/bootstrap.css">
   <!--Bootstrap Css-->
-  <link rel="shortcut icon" href="img/Favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
   <!--Icono del TAB-->
 
 </head>
@@ -30,12 +30,32 @@
   <!--Fin del Banner-->
 
   <!--Comienzo NAVBAR-->
-  <nav class="navbar">
+  <nav class="navbar w-100">
     
 
     <!-- Navbar content -->
     <div class="menu-btn">
-      <div class="menu-btn-burger"></div>
+      <div class="menu-btn-burger"> 
+        <!--Comienzo despliuegue MENU-->
+<ul class="nav flex-column p-3 w-100">
+  <li class="nav-item">
+    <a class="nav-link active text-secondary text-uppercase" href="#">NEW COLECTION</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link text-secondary text-uppercase" href="#">ACCESORIOS</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link text-secondary text-uppercase" href="#">DECORACIÓN</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link text-secondary text-uppercase" href="#">SUPER SALE</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link text-secondary font-weight-bold text-uppercase" href="#">CONTACTO</a>
+  </li>
+</ul>
+<!--FIN despliuegue MENU-->
+      </div>
     </div>
 
     <div class="logo">
@@ -54,11 +74,7 @@
   <!--FIN NAVBAR-->
 
 
-<!--Comienzo despliuegue MENU-->
 
-
-
-<!--FIN despliuegue MENU-->
 
 
 
@@ -200,7 +216,7 @@
     <div class="leftside">
       <h1 class="m-0 p-4 text-white">DECORACIÓN</h1>
       <p class="m-0 p-0 text-white text-uppercase font-weight-semibold"> <u> New in  </u> </p>
-      <img class="w-100" src="img/Grid 2.jpg" alt=""> 
+      <img class="w-100" src="img/grid2.jpg" alt=""> 
     </div>
   </div>
 
@@ -209,7 +225,7 @@
   <div class="rightside">
     <h1 class="m-0 p-4 text-white">ACCESORIOS</h1>
     <p class="m-0 p-0 text-white text-uppercase font-weight-semibold"> <u> New in  </u> </p>
-    <img class="w-100" src="img/Grid 3.jpg" alt="">  
+    <img class="w-100" src="img/grid3.jpg" alt="">  
   </div>
 </div>
 
@@ -219,23 +235,23 @@
 
 
 <!--Iconos de beneficios DESKTOP-->
-<div class="container beneficios-desktop">
+<div class="container beneficios-desktop pt-3">
   <div class="row">
 
     <div class="col-md-4 text-center">
-      <img alt="" class="resize-image" id="image2" height="100px" src="img/Groupdescuento.svg">
+      <img alt="" class="resize-image" id="image2" height="100px" src="img/descuento.svg">
       <h5>10% OFF - TRANSFERENCIA BANCARIA O EFECTIVO</h5>
       <p>PARA PRODUCTOS SIN LIQUIDACION</p>
     </div>
 
     <div class="col-md-4 text-center">
-      <img alt="" class="resize-image" id="image1" height="100px" src="img/Group 456camion.svg">
+      <img alt="" class="resize-image" id="image1" height="100px" src="img/camion.svg">
       <h5>ENVIOS SIN CARGO</h5>
       <p>LOMAS - BANFIELD - TEMPERLEY</p>
     </div>
 
     <div class="col-md-4 text-center">
-      <img alt="" class="resize-image" id="image3" height="100px" src="img/Vectorwhastapp.svg">
+      <img alt="" class="resize-image" id="image3" height="100px" src="img/vectorwhastapp.svg">
       <h5>TENES ALGUNA DUDA?</h5>
       <p>HABLANOS AL 1111111111</p>
     </div>
@@ -249,15 +265,15 @@
   
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="img/carousel beneficios 1.svg" height="150px"
+      <img class="d-block w-100" src="img/carouselbeneficios1.svg" height="150px"
         data-src="holder.js/900x400?theme=social" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="img/carousel beneficios 3.svg" height="150px"
+      <img class="d-block w-100" src="img/carouselbeneficios3.svg" height="150px"
         data-src="holder.js/900x400?theme=industrial" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="img/carousel beneficios 2.svg" height="150px"
+      <img class="d-block w-100" src="img/carouselbeneficios2.svg" height="150px"
         data-src="holder.js/900x400?theme=industrial" alt="Second slide">
     </div>
   </div>
@@ -286,7 +302,6 @@
 
 
 <!--Comienzo Separador-->
-
 <div class="separador">
   <h1>SUPER SALE</h1>
   <p>POR TIEMPO LIMITADO</p>
@@ -310,7 +325,7 @@
         </div>
 
         <a href="">
-        <img class="card-img-top" src="img/Coti1.jpg" alt="Card image">
+        <img class="card-img-top" src="img/coti1.jpg" alt="Card image">
         </a>
 
     </div>
@@ -335,7 +350,7 @@
       </div>
 
       <a href="">
-      <img class="card-img-top" src="img/Coti2.jpg" alt="Card image">
+      <img class="card-img-top" src="img/coti2.jpg" alt="Card image">
       </a>
 
   </div>
@@ -360,7 +375,7 @@
     </div>
 
     <a href="">
-    <img class="card-img-top" src="img/Coti3.jpg" alt="Card image">
+    <img class="card-img-top" src="img/coti3.jpg" alt="Card image">
     </a>
 
 </div>
@@ -385,7 +400,7 @@
     </div>
 
     <a href="">
-    <img class="card-img-top" src="img/Coti4.jpg" alt="Card image">
+    <img class="card-img-top" src="img/coti4.jpg" alt="Card image">
     </a>
 
 </div>
@@ -411,7 +426,7 @@
     </div>
 
     <a href="">
-    <img class="card-img-top" src="img/Coti5.jpg" alt="Card image">
+    <img class="card-img-top" src="img/coti5.jpg" alt="Card image">
     </a>
 
 </div>
