--- a/accesorios.html
+++ b/accesorios.html
@@ -78,38 +78,11 @@
 
 
 
-
-
-
-
-  <!--Comienzo Carousel-->
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner" role="listbox">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="img/carousel.svg" data-src="holder.js/900x400?theme=social" alt="First slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="img/carousel2.svg" data-src="holder.js/900x400?theme=industrial"
-          alt="Second slide">
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-  <!--Fin Carousel-->
-
-
   <!--Comienzo Separador-->
 
   <div class="separador">
-    <h1>NEW COLLECTION</h1>
-    <p>SS21</p>
+    <h1>ACCESORIOS</h1>
+    <p>10% en efectivo</p>
   </div>
 
   <!--Fin Separador-->
@@ -126,8 +99,8 @@
       <div class="card-body p-0 rounded-0">
 
 
-          <a href="articulo.html">
-          <img class="card-img-top rounded-0" src="img/anita1.jpg" alt="Card image">
+          <a href="articulo2.html">
+          <img class="card-img-top rounded-0" src="img/aros1.jpg" alt="Card image">
           </a>
 
       </div>
@@ -147,8 +120,8 @@
 
     <div class="card-body p-0 rounded-0">
 
-        <a href="articulo.html">
-        <img class="card-img-top rounded-0" src="img/anita2.jpg" alt="Card image">
+        <a href="articulo2.html">
+        <img class="card-img-top rounded-0" src="img/cinto1.jpg" alt="Card image">
         </a>
 
     </div>
@@ -168,8 +141,8 @@
 
   <div class="card-body p-0 rounded-0">
 
-      <a href="articulo.html">
-      <img class="card-img-top rounded-0" src="img/anita4.jpg" alt="Card image">
+      <a href="articulo2.html">
+      <img class="card-img-top rounded-0" src="img/cinto2.jpg" alt="Card image">
       </a>
 
   </div>
@@ -190,8 +163,99 @@
 
   <div class="card-body p-0 rounded-0">
 
-      <a href="articulo.html">
-      <img class="card-img-top rounded-0" src="img/anita5.jpg" alt="Card image">
+      <a href="articulo2.html">
+      <img class="card-img-top rounded-0" src="img/cinto3.jpg" alt="Card image">
+      </a>
+
+  </div>
+
+  <div class="info card-body text-center border border-top-0 border-secondary rounded-0">
+          <h6 class="font-weight-normal">Blazer Amber Lila</h6>
+          <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
+          <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
+          <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
+  </div>
+  
+</div>
+
+</div>
+<!--FIN DE ARTICULOS DEL NEW COLECTION-->
+<!--COMIENZO DE ARTICULOS DEL NEW COLECTION-->
+<div class="card-group espacio">
+
+  <!--ARTICULO 1-->
+
+  <div class="card border-0 m-0 rounded-0">
+
+      <div class="card-body p-0 rounded-0">
+
+
+          <a href="articulo2.html">
+          <img class="card-img-top rounded-0" src="img/cinto4.jpg" alt="Card image">
+          </a>
+
+      </div>
+
+      <div class="info card-body text-center border border-top-0 border-secondary rounded-0">
+              <h6 class="font-weight-normal">Blazer Amber Lila</h6>
+              <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
+              <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
+              <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
+      </div>
+
+  </div>
+
+  <!--ARTICULO 2-->
+
+  <div class="card border-0 m-0 rounded-0">
+
+    <div class="card-body p-0 rounded-0">
+
+        <a href="articulo2.html">
+        <img class="card-img-top rounded-0" src="img/collar1.jpg" alt="Card image">
+        </a>
+
+    </div>
+
+    <div class="info card-body text-center border border-top-0 border-secondary rounded-0">
+            <h6 class="font-weight-normal">Blazer Amber Lila</h6>
+            <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
+            <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
+            <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
+    </div>
+    
+</div>
+
+<!--ARTICULO 4-->
+
+<div class="card border-0 m-0 rounded-0">
+
+  <div class="card-body p-0 rounded-0">
+
+      <a href="articulo2.html">
+      <img class="card-img-top rounded-0" src="img/cinto5.jpg" alt="Card image">
+      </a>
+
+  </div>
+
+  <div class="info card-body text-center border border-top-0 border-secondary rounded-0">
+          <h6 class="font-weight-normal">Blazer Amber Lila</h6>
+          <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
+          <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
+          <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
+  </div>
+  
+</div>
+
+
+<!--ARTICULO 5-->
+
+<div class="card border-0 m-0 rounded-0">
+
+  <div class="card-body p-0 rounded-0">
+
+      <a href="articulo2.html">
+      <img class="card-img-top rounded-0" src="img/cinto7.jpg" alt="Card image">
       </a>
 
   </div>
@@ -226,10 +290,10 @@
 
 <div class="col-md-6 no-gutters rounded-0">
   <div class="rightside">
-    <h1 class="m-0 p-4 text-white">ACCESORIOS</h1>
+    <h1 class="m-0 p-4 text-white">NEW COLLECTION</h1>
     <p class="m-0 p-0 text-white text-uppercase font-weight-semibold"> <u> New in  </u> </p>
-    <a href="accesorios.html">
-    <img class="w-100 foto-mitad-right" src="img/accesorios2.jpg" alt="">
+    <a href="newcolection.html">
+    <img class="w-100 foto-mitad-right" src="img/anita1111.jpg" alt="">
   </a>  
   </div>
 </div>
