--- a/carrito.html
+++ b/carrito.html
@@ -29,12 +29,34 @@
   <!--Fin del Banner-->
 
     <!--Comienzo NAVBAR-->
-    <nav class="navbar">
+    <nav class="navbar position-fixed">
 
         <!-- Navbar content -->
+        <label for="toggle">
         <div class="menu-btn">
             <div class="menu-btn-burger"></div>
         </div>
+      </label>
+      <input type="checkbox" id="toggle"/>
+      <!--Dropdown MENU-->
+     <ul class="nav flex-column p-3 w-100 menu-escondido">
+        <li class="nav-item">
+          <a class="nav-link active text-secondary text-uppercase" href="newcolection.html">NEW COLECTION</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-secondary text-uppercase" href="accesorios.html">ACCESORIOS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-secondary text-uppercase" href="decoracion.html">DECORACIÓN</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-secondary text-uppercase" href="#supersale">SUPER SALE</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-secondary font-weight-bold text-uppercase" href="#JOIN">JOIN US</a>
+        </li>
+      </ul>
+    <!--Fin Dropdown MENU-->
 
         <div class="logo">
             <a href="index.html">
@@ -53,12 +75,230 @@
 
     <!--Comienzo Imagen Carrito-->
 
-    <div class="container">
+    <div class="container container-carrito">
+        <div class="row">
+            <div class="col-md-12">
         <img class="emptyroom" src="img/empty-room.jpg" alt="" style="width:100%;">
         <p class="centered"> Tu carrito esta vacio </p>
     </div>
+</div>
+    </div>
 
     <!--Fin Imagen Carrito-->
+
+
+<!--Comienzo Separador-->
+<div class="separador2" id="supersale">
+  <h1>SUPER SALE</h1>
+  <p>POR TIEMPO LIMITADO</p>
+</div>
+
+<!--Fin Separador-->
+
+
+
+<!--COMIENZO DE ARTICULOS DEL NEW COLECTION-->
+<div class="card-group secundario">
+
+<!--ARTICULO 1-->
+
+<div class="card border-0 m-0 rounded-0">
+
+    <div class="card-body p-0">
+
+      <div class="card-text bg-secondary d-inline-block pr-1 rounded-0">
+        <h6 class="font-weight-bold text-white m-1">25% 0FF</h6>
+        </div>
+
+        <a href="articulo.html">
+        <img class="card-img-top" src="img/coti1.jpg" alt="Card image">
+        </a>
+
+    </div>
+
+    <div class="info card-body text-center border border-top-0 border-secondary">
+            <h6 class="font-weight-normal">Blazer Amber Lila</h6>
+            <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
+            <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
+            <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
+    </div>
+
+</div>
+
+<!--ARTICULO 2-->
+
+<div class="card border-0 m-0 rounded-0">
+
+  <div class="card-body p-0">
+
+    <div class="card-text bg-danger d-inline-block pr-1 rounded-0">
+      <h6 class="font-weight-bold text-white m-1">30% 0FF</h6>
+      </div>
+
+      <a href="articulo.html">
+      <img class="card-img-top" src="img/coti2.jpg" alt="Card image">
+      </a>
+
+  </div>
+
+  <div class="info card-body text-center border border-top-0 border-secondary">
+          <h6 class="font-weight-normal">Blazer Amber Lila</h6>
+          <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
+          <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
+          <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
+  </div>
+  
+</div>
+
+<!--ARTICULO 3-->
+
+<div class="card border-0 m-0 rounded-0">
+
+<div class="card-body p-0">
+
+  <div class="card-text bg-secondary d-inline-block pr-1 rounded-0">
+    <h6 class="font-weight-bold text-white m-1">25% 0FF</h6>
+    </div>
+
+    <a href="articulo.html">
+    <img class="card-img-top" src="img/coti3.jpg" alt="Card image">
+    </a>
+
+</div>
+
+<div class="info card-body text-center border border-top-0 border-secondary">
+        <h6 class="font-weight-normal">Blazer Amber Lila</h6>
+        <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
+        <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
+        <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
+</div>
+
+</div>
+
+<!--ARTICULO 4-->
+
+<div class="card border-0 m-0 rounded-0">
+
+<div class="card-body p-0">
+
+  <div class="card-text bg-danger d-inline-block pr-1 rounded-0">
+    <h6 class="font-weight-bold text-white m-1">45% 0FF</h6>
+    </div>
+
+    <a href="articulo.html">
+    <img class="card-img-top" src="img/coti4.jpg" alt="Card image">
+    </a>
+
+</div>
+
+<div class="info card-body text-center border border-top-0 border-secondary">
+        <h6 class="font-weight-normal">Blazer Amber Lila</h6>
+        <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
+        <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
+        <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
+</div>
+
+</div>
+
+
+<!--ARTICULO 5-->
+
+<div class="card border-0 m-0 rounded-0">
+
+<div class="card-body p-0">
+
+  <div class="card-text bg-secondary d-inline-block pr-1 rounded-0">
+    <h6 class="font-weight-bold text-white m-1">15% 0FF</h6>
+    </div>
+
+    <a href="articulo.html">
+    <img class="card-img-top" src="img/coti5.jpg" alt="Card image">
+    </a>
+
+</div>
+
+<div class="info card-body text-center border border-top-0 border-secondary">
+        <h6 class="font-weight-normal">Blazer Amber Lila</h6>
+        <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
+        <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
+        <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
+</div>
+
+</div>
+
+</div>
+<!--FIN DE ARTICULOS DEL NEW COLECTION-->
+
+
+      <!--Newsletter-->
+  <div class="container" id="JOIN">
+
+    <h1 class="text-center">JOIN OUR NEWSLETTER</h1>
+
+    <div class="input-group">
+      <input type="text" class="form-control" aria-describedby="basic-addon1">
+      <div class="input-group-append">
+        <button class="btn btn-secondary" type="button">Enviar</button>
+      </div>
+    </div>
+
+  </div>
+  <!--Fin Newsletter-->
+
+
+
+
+
+<!-- Footer -->
+<footer class="page-footer">
+
+
+    <div class="container container-footer">
+  
+  
+      <div class="row text-center">
+  
+  
+        <div class="col-md-12">
+          <div class="mb-2 flex-center">
+  
+            <!-- Facebook -->
+            <a href="https://www.facebook.com/molihbi" class="fb-ic" target=”_blank”>
+              <i class="fab fa-facebook-f fa-lg white-text mr-md-2 mr-3 fa-2x">
+                <img src="img/facebook.png" height="24px" alt="">
+              </i>
+            </a>
+  
+  
+            <!--Instagram-->
+            <a href="https://www.instagram.com/molihbi/?hl=es-la" class="ins-ic" target=”_blank”>
+              <i class="fab fa-instagram fa-lg white-text mr-md-2 mr-3 fa-2x">
+                <img src="img/1200px-Instagram_simple_icon.svg.png" height="24px" alt="">
+              </i>
+            </a>
+  
+          </div>
+        </div>
+  
+  
+      </div>
+  
+  
+    </div>
+  
+    <!-- Copyright -->
+      <div class="footer-copyright text-center py-3">© 2020 Copyright:
+      <a href="index.html" class="text-secondary"> Molihbi.com</a>
+  
+      <div class="footer-copyright text-center">Developed by
+        <a href="https://www.linkedin.com/in/agustin-rossi/" target="_blank" class="text-secondary"> Agustin Rossi</a>
+       </div>
+      </div>
+    
+    <!-- Copyright -->
+  
+  </footer>
+  <!-- Footer -->
 
 
 
