--- a/decoracion.html
+++ b/decoracion.html
@@ -78,38 +78,11 @@
 
 
 
-
-
-
-
-  <!--Comienzo Carousel-->
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner" role="listbox">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="img/carousel.svg" data-src="holder.js/900x400?theme=social" alt="First slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="img/carousel2.svg" data-src="holder.js/900x400?theme=industrial"
-          alt="Second slide">
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-  <!--Fin Carousel-->
-
-
   <!--Comienzo Separador-->
 
   <div class="separador">
-    <h1>NEW COLLECTION</h1>
-    <p>SS21</p>
+    <h1>Decoración</h1>
+    <p>Molihbi Home</p>
   </div>
 
   <!--Fin Separador-->
@@ -126,8 +99,8 @@
       <div class="card-body p-0 rounded-0">
 
 
-          <a href="articulo.html">
-          <img class="card-img-top rounded-0" src="img/anita1.jpg" alt="Card image">
+          <a href="articulo3.html">
+          <img class="card-img-top rounded-0" src="img/vela.jpg" alt="Card image">
           </a>
 
       </div>
@@ -147,8 +120,8 @@
 
     <div class="card-body p-0 rounded-0">
 
-        <a href="articulo.html">
-        <img class="card-img-top rounded-0" src="img/anita2.jpg" alt="Card image">
+        <a href="articulo3.html">
+        <img class="card-img-top rounded-0" src="img/vela2.jpg" alt="Card image">
         </a>
 
     </div>
@@ -168,8 +141,8 @@
 
   <div class="card-body p-0 rounded-0">
 
-      <a href="articulo.html">
-      <img class="card-img-top rounded-0" src="img/anita4.jpg" alt="Card image">
+      <a href="articulo3.html">
+      <img class="card-img-top rounded-0" src="img/difusor.jpg" alt="Card image">
       </a>
 
   </div>
@@ -190,8 +163,99 @@
 
   <div class="card-body p-0 rounded-0">
 
-      <a href="articulo.html">
-      <img class="card-img-top rounded-0" src="img/anita5.jpg" alt="Card image">
+      <a href="articulo3.html">
+      <img class="card-img-top rounded-0" src="img/jabon.jpeg" alt="Card image">
+      </a>
+
+  </div>
+
+  <div class="info card-body text-center border border-top-0 border-secondary rounded-0">
+          <h6 class="font-weight-normal">Blazer Amber Lila</h6>
+          <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
+          <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
+          <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
+  </div>
+  
+</div>
+
+</div>
+<!--FIN DE ARTICULOS DEL NEW COLECTION-->
+<!--COMIENZO DE ARTICULOS DEL NEW COLECTION-->
+<div class="card-group espacio">
+
+  <!--ARTICULO 1-->
+
+  <div class="card border-0 m-0 rounded-0">
+
+      <div class="card-body p-0 rounded-0">
+
+
+          <a href="articulo3.html">
+          <img class="card-img-top rounded-0" src="img/spray.jpg" alt="Card image">
+          </a>
+
+      </div>
+
+      <div class="info card-body text-center border border-top-0 border-secondary rounded-0">
+              <h6 class="font-weight-normal">Blazer Amber Lila</h6>
+              <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
+              <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
+              <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
+      </div>
+
+  </div>
+
+  <!--ARTICULO 2-->
+
+  <div class="card border-0 m-0 rounded-0">
+
+    <div class="card-body p-0 rounded-0">
+
+        <a href="articulo3.html">
+        <img class="card-img-top rounded-0" src="img/vela3.jpg" alt="Card image">
+        </a>
+
+    </div>
+
+    <div class="info card-body text-center border border-top-0 border-secondary rounded-0">
+            <h6 class="font-weight-normal">Blazer Amber Lila</h6>
+            <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
+            <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
+            <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
+    </div>
+    
+</div>
+
+<!--ARTICULO 4-->
+
+<div class="card border-0 m-0 rounded-0">
+
+  <div class="card-body p-0 rounded-0">
+
+      <a href="articulo3.html">
+      <img class="card-img-top rounded-0" src="img/difusor2.jpg" alt="Card image">
+      </a>
+
+  </div>
+
+  <div class="info card-body text-center border border-top-0 border-secondary rounded-0">
+          <h6 class="font-weight-normal">Blazer Amber Lila</h6>
+          <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
+          <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
+          <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
+  </div>
+  
+</div>
+
+
+<!--ARTICULO 5-->
+
+<div class="card border-0 m-0 rounded-0">
+
+  <div class="card-body p-0 rounded-0">
+
+      <a href="articulo3.html">
+      <img class="card-img-top rounded-0" src="img/vela4.jpg" alt="Card image">
       </a>
 
   </div>
@@ -215,10 +279,10 @@
 
   <div class="col-md-6 no-gutters rounded-0">
     <div class="leftside">
-      <h1 class="m-0 p-4 text-white">DECORACIÓN</h1>
+      <h1 class="m-0 p-4 text-white">ACCESORIOS</h1>
       <p class="m-0 p-0 text-white text-uppercase font-weight-semibold"> <u> New in  </u> </p>
-      <a href="decoracion.html">
-      <img class="w-100 foto-mitad-left" src="img/deco1.jpg" alt=""> 
+      <a href="accesorios.html">
+      <img class="w-100 foto-mitad-left" src="img/accesorios2.jpg" alt=""> 
     </a>
     </div>
   </div>
@@ -226,11 +290,11 @@
 
 <div class="col-md-6 no-gutters rounded-0">
   <div class="rightside">
-    <h1 class="m-0 p-4 text-white">ACCESORIOS</h1>
+    <h1 class="m-0 p-4 text-white">NEW COLLECTION</h1>
     <p class="m-0 p-0 text-white text-uppercase font-weight-semibold"> <u> New in  </u> </p>
-    <a href="accesorios.html">
-    <img class="w-100 foto-mitad-right" src="img/accesorios2.jpg" alt="">
-  </a>  
+    <a href="newcolection.html">
+    <img class="w-100 foto-mitad-right" src="img/anita1111.jpg" alt=""> 
+  </a> 
   </div>
 </div>
 
@@ -307,7 +371,7 @@
 
 
 <!--Comienzo Separador-->
-<div class="separador2" id="supersale">
+<div class="separador2"  id="supersale">
   <h1>SUPER SALE</h1>
   <p>POR TIEMPO LIMITADO</p>
 </div>
@@ -329,7 +393,7 @@
         <h6 class="font-weight-bold text-white m-1">25% 0FF</h6>
         </div>
 
-        <a href="articulo.html">
+        <a href="">
         <img class="card-img-top" src="img/coti1.jpg" alt="Card image">
         </a>
 
@@ -354,7 +418,7 @@
       <h6 class="font-weight-bold text-white m-1">30% 0FF</h6>
       </div>
 
-      <a href="articulo.html">
+      <a href="">
       <img class="card-img-top" src="img/coti2.jpg" alt="Card image">
       </a>
 
@@ -379,7 +443,7 @@
     <h6 class="font-weight-bold text-white m-1">25% 0FF</h6>
     </div>
 
-    <a href="articulo.html">
+    <a href="">
     <img class="card-img-top" src="img/coti3.jpg" alt="Card image">
     </a>
 
@@ -404,7 +468,7 @@
     <h6 class="font-weight-bold text-white m-1">45% 0FF</h6>
     </div>
 
-    <a href="articulo.html">
+    <a href="">
     <img class="card-img-top" src="img/coti4.jpg" alt="Card image">
     </a>
 
@@ -430,7 +494,7 @@
     <h6 class="font-weight-bold text-white m-1">15% 0FF</h6>
     </div>
 
-    <a href="articulo.html">
+    <a href="">
     <img class="card-img-top" src="img/coti5.jpg" alt="Card image">
     </a>
 
