--- a/carrito.html
+++ b/carrito.html
@@ -3,9 +3,10 @@
 
 
 <head>
-<meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Tienda online de indumentaria, accesorios y articulos de decoración. Ofreciendo desde hace mas de 5 años lo ultimo de la moda Europea. Hacemos envios a todo el pais mediante el correo argentino y ofrecemos un 10% de descuento pagando en efectivo, ubicada en Lomas de Zamora, Buenos Aires, Argentina.">
+  <meta name="description"
+    content="Tienda online de indumentaria, accesorios y articulos de decoración. Ofreciendo desde hace mas de 5 años lo ultimo de la moda Europea. Hacemos envios a todo el pais mediante el correo argentino y ofrecemos un 10% de descuento pagando en efectivo, ubicada en Lomas de Zamora, Buenos Aires, Argentina.">
   <meta name="keywords"
     content="Indumentaria, accesorios, decoración, pantalones, fashion, lomas de zamora, almohadones, perfumeria, moda">
   <title>Molihbi - Tienda Online de Indumentaria</title>
@@ -20,217 +21,217 @@
 
 <body>
 
- <!--Comienzo Banner-->
- <div class="banner bg-secondary">
+  <!--Comienzo Banner-->
+  <div class="banner bg-secondary">
     <p>
       3 PAGOS SIN INTERES - ENVIOS A TODO EL PAIS
     </p>
   </div>
   <!--Fin del Banner-->
 
-    <!--Comienzo NAVBAR-->
-    <nav class="navbar position-fixed">
+  <!--Comienzo NAVBAR-->
+  <nav class="navbar position-fixed">
 
-        <!-- Navbar content -->
-        <label for="toggle">
-        <div class="menu-btn">
-            <div class="menu-btn-burger"></div>
-        </div>
-      </label>
-      <input type="checkbox" id="toggle"/>
-      <!--Dropdown MENU-->
-     <ul class="nav flex-column p-3 w-100 menu-escondido">
-        <li class="nav-item">
-          <a class="nav-link active text-secondary text-uppercase" href="newcolection.html">NEW COLECTION</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-secondary text-uppercase" href="accesorios.html">ACCESORIOS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-secondary text-uppercase" href="decoracion.html">DECORACIÓN</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-secondary text-uppercase" href="#supersale">SUPER SALE</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-secondary font-weight-bold text-uppercase" href="#JOIN">JOIN US</a>
-        </li>
-      </ul>
+    <!-- Navbar content -->
+    <label for="toggle">
+      <div class="menu-btn">
+        <div class="menu-btn-burger"></div>
+      </div>
+    </label>
+    <input type="checkbox" id="toggle" />
+    <!--Dropdown MENU-->
+    <ul class="nav flex-column p-3 w-100 menu-escondido">
+      <li class="nav-item">
+        <a class="nav-link active text-secondary text-uppercase" href="newcolection.html">NEW COLECTION</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-secondary text-uppercase" href="accesorios.html">ACCESORIOS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-secondary text-uppercase" href="decoracion.html">DECORACIÓN</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-secondary text-uppercase" href="#supersale">SUPER SALE</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-secondary font-weight-bold text-uppercase" href="#JOIN">JOIN US</a>
+      </li>
+    </ul>
     <!--Fin Dropdown MENU-->
 
-        <div class="logo">
-            <a href="index.html">
-                <img src="img/logo.png" alt="" height="70px">
-            </a>
-        </div>
+    <div class="logo">
+      <a href="index.html">
+        <img src="img/logo.png" alt="" height="70px">
+      </a>
+    </div>
 
-        <div class="bag">
-            <a href="carrito.html">
-                <img src="img/bag.svg" alt="" height="25px">
-            </a>
-        </div>
+    <div class="bag">
+      <a href="carrito.html">
+        <img src="img/bag.svg" alt="" height="25px">
+      </a>
+    </div>
 
-    </nav>
-    <!--FIN NAVBAR-->
+  </nav>
+  <!--FIN NAVBAR-->
 
-    <!--Comienzo Imagen Carrito-->
+  <!--Comienzo Imagen Carrito-->
 
-    <div class="container container-carrito">
-        <div class="row">
-            <div class="col-md-12">
+  <div class="container container-carrito">
+    <div class="row">
+      <div class="col-md-12">
         <img class="emptyroom" src="img/empty-room.jpg" alt="" style="width:100%;">
         <p class="centered"> Tu carrito esta vacio </p>
+      </div>
     </div>
-</div>
-    </div>
+  </div>
 
-    <!--Fin Imagen Carrito-->
-
-
-<!--Comienzo Separador-->
-<div class="separador2" id="supersale">
-  <h1>SUPER SALE</h1>
-  <p>POR TIEMPO LIMITADO</p>
-</div>
-
-<!--Fin Separador-->
+  <!--Fin Imagen Carrito-->
 
 
+  <!--Comienzo Separador-->
+  <div class="separador2" id="supersale">
+    <h1>SUPER SALE</h1>
+    <p>POR TIEMPO LIMITADO</p>
+  </div>
 
-<!--COMIENZO DE ARTICULOS DEL NEW COLECTION-->
-<div class="card-group secundario">
+  <!--Fin Separador-->
 
-<!--ARTICULO 1-->
 
-<div class="card border-0 m-0 rounded-0">
 
-    <div class="card-body p-0">
+  <!--COMIENZO DE ARTICULOS DEL NEW COLECTION-->
+  <div class="card-group secundario">
 
-      <div class="card-text bg-secondary d-inline-block pr-1 rounded-0">
-        <h6 class="font-weight-bold text-white m-1">25% 0FF</h6>
+    <!--ARTICULO 1-->
+
+    <div class="card border-0 m-0 rounded-0">
+
+      <div class="card-body p-0">
+
+        <div class="card-text bg-secondary d-inline-block pr-1 rounded-0">
+          <h6 class="font-weight-bold text-white m-1">25% 0FF</h6>
         </div>
 
         <a href="articulo.html">
-        <img class="card-img-top" src="img/coti1.jpg" alt="Card image">
+          <img class="card-img-top" src="img/coti1.jpg" alt="Card image">
         </a>
 
-    </div>
-
-    <div class="info card-body text-center border border-top-0 border-secondary">
-            <h6 class="font-weight-normal">Blazer Amber Lila</h6>
-            <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
-            <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
-            <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
-    </div>
-
-</div>
-
-<!--ARTICULO 2-->
-
-<div class="card border-0 m-0 rounded-0">
-
-  <div class="card-body p-0">
-
-    <div class="card-text bg-danger d-inline-block pr-1 rounded-0">
-      <h6 class="font-weight-bold text-white m-1">30% 0FF</h6>
       </div>
 
-      <a href="articulo.html">
-      <img class="card-img-top" src="img/coti2.jpg" alt="Card image">
-      </a>
+      <div class="info card-body text-center border border-top-0 border-secondary">
+        <h6 class="font-weight-normal">Blazer Amber Lila</h6>
+        <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
+        <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
+        <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
+      </div>
+
+    </div>
+
+    <!--ARTICULO 2-->
+
+    <div class="card border-0 m-0 rounded-0">
+
+      <div class="card-body p-0">
+
+        <div class="card-text bg-danger d-inline-block pr-1 rounded-0">
+          <h6 class="font-weight-bold text-white m-1">30% 0FF</h6>
+        </div>
+
+        <a href="articulo.html">
+          <img class="card-img-top" src="img/coti2.jpg" alt="Card image">
+        </a>
+
+      </div>
+
+      <div class="info card-body text-center border border-top-0 border-secondary">
+        <h6 class="font-weight-normal">Blazer Amber Lila</h6>
+        <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
+        <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
+        <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
+      </div>
+
+    </div>
+
+    <!--ARTICULO 3-->
+
+    <div class="card border-0 m-0 rounded-0">
+
+      <div class="card-body p-0">
+
+        <div class="card-text bg-secondary d-inline-block pr-1 rounded-0">
+          <h6 class="font-weight-bold text-white m-1">25% 0FF</h6>
+        </div>
+
+        <a href="articulo.html">
+          <img class="card-img-top" src="img/coti3.jpg" alt="Card image">
+        </a>
+
+      </div>
+
+      <div class="info card-body text-center border border-top-0 border-secondary">
+        <h6 class="font-weight-normal">Blazer Amber Lila</h6>
+        <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
+        <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
+        <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
+      </div>
+
+    </div>
+
+    <!--ARTICULO 4-->
+
+    <div class="card border-0 m-0 rounded-0">
+
+      <div class="card-body p-0">
+
+        <div class="card-text bg-danger d-inline-block pr-1 rounded-0">
+          <h6 class="font-weight-bold text-white m-1">45% 0FF</h6>
+        </div>
+
+        <a href="articulo.html">
+          <img class="card-img-top" src="img/coti4.jpg" alt="Card image">
+        </a>
+
+      </div>
+
+      <div class="info card-body text-center border border-top-0 border-secondary">
+        <h6 class="font-weight-normal">Blazer Amber Lila</h6>
+        <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
+        <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
+        <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
+      </div>
+
+    </div>
+
+
+    <!--ARTICULO 5-->
+
+    <div class="card border-0 m-0 rounded-0">
+
+      <div class="card-body p-0">
+
+        <div class="card-text bg-secondary d-inline-block pr-1 rounded-0">
+          <h6 class="font-weight-bold text-white m-1">15% 0FF</h6>
+        </div>
+
+        <a href="articulo.html">
+          <img class="card-img-top" src="img/coti5.jpg" alt="Card image">
+        </a>
+
+      </div>
+
+      <div class="info card-body text-center border border-top-0 border-secondary">
+        <h6 class="font-weight-normal">Blazer Amber Lila</h6>
+        <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
+        <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
+        <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
+      </div>
+
+    </div>
 
   </div>
-
-  <div class="info card-body text-center border border-top-0 border-secondary">
-          <h6 class="font-weight-normal">Blazer Amber Lila</h6>
-          <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
-          <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
-          <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
-  </div>
-  
-</div>
-
-<!--ARTICULO 3-->
-
-<div class="card border-0 m-0 rounded-0">
-
-<div class="card-body p-0">
-
-  <div class="card-text bg-secondary d-inline-block pr-1 rounded-0">
-    <h6 class="font-weight-bold text-white m-1">25% 0FF</h6>
-    </div>
-
-    <a href="articulo.html">
-    <img class="card-img-top" src="img/coti3.jpg" alt="Card image">
-    </a>
-
-</div>
-
-<div class="info card-body text-center border border-top-0 border-secondary">
-        <h6 class="font-weight-normal">Blazer Amber Lila</h6>
-        <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
-        <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
-        <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
-</div>
-
-</div>
-
-<!--ARTICULO 4-->
-
-<div class="card border-0 m-0 rounded-0">
-
-<div class="card-body p-0">
-
-  <div class="card-text bg-danger d-inline-block pr-1 rounded-0">
-    <h6 class="font-weight-bold text-white m-1">45% 0FF</h6>
-    </div>
-
-    <a href="articulo.html">
-    <img class="card-img-top" src="img/coti4.jpg" alt="Card image">
-    </a>
-
-</div>
-
-<div class="info card-body text-center border border-top-0 border-secondary">
-        <h6 class="font-weight-normal">Blazer Amber Lila</h6>
-        <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
-        <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
-        <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
-</div>
-
-</div>
+  <!--FIN DE ARTICULOS DEL NEW COLECTION-->
 
 
-<!--ARTICULO 5-->
-
-<div class="card border-0 m-0 rounded-0">
-
-<div class="card-body p-0">
-
-  <div class="card-text bg-secondary d-inline-block pr-1 rounded-0">
-    <h6 class="font-weight-bold text-white m-1">15% 0FF</h6>
-    </div>
-
-    <a href="articulo.html">
-    <img class="card-img-top" src="img/coti5.jpg" alt="Card image">
-    </a>
-
-</div>
-
-<div class="info card-body text-center border border-top-0 border-secondary">
-        <h6 class="font-weight-normal">Blazer Amber Lila</h6>
-        <h6 class="d-inline-block font-weight-bold">$3.920,00</h6>
-        <h6 class="text-muted d-inline tachado"> <del>$4.900,00</del> </h6>
-        <h6 class="small"> <b>3</b> cuotas sin interés de <b>$1.306,67</b> </h6>
-</div>
-
-</div>
-
-</div>
-<!--FIN DE ARTICULOS DEL NEW COLECTION-->
-
-
-      <!--Newsletter-->
+  <!--Newsletter-->
   <div class="container" id="JOIN">
 
     <h1 class="text-center">JOIN OUR NEWSLETTER</h1>
@@ -249,54 +250,54 @@
 
 
 
-<!-- Footer -->
-<footer class="page-footer">
+  <!-- Footer -->
+  <footer class="page-footer">
 
 
     <div class="container container-footer">
-  
-  
+
+
       <div class="row text-center">
-  
-  
+
+
         <div class="col-md-12">
           <div class="mb-2 flex-center">
-  
+
             <!-- Facebook -->
             <a href="https://www.facebook.com/molihbi" class="fb-ic" target=”_blank”>
               <i class="fab fa-facebook-f fa-lg white-text mr-md-2 mr-3 fa-2x">
                 <img src="img/facebook.png" height="24px" alt="">
               </i>
             </a>
-  
-  
+
+
             <!--Instagram-->
             <a href="https://www.instagram.com/molihbi/?hl=es-la" class="ins-ic" target=”_blank”>
               <i class="fab fa-instagram fa-lg white-text mr-md-2 mr-3 fa-2x">
                 <img src="img/1200px-Instagram_simple_icon.svg.png" height="24px" alt="">
               </i>
             </a>
-  
+
           </div>
         </div>
-  
-  
+
+
       </div>
-  
-  
+
+
     </div>
-  
+
     <!-- Copyright -->
-      <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
       <a href="index.html" class="text-secondary"> Molihbi.com</a>
-  
+
       <div class="footer-copyright text-center">Developed by
         <a href="https://www.linkedin.com/in/agustin-rossi/" target="_blank" class="text-secondary"> Agustin Rossi</a>
-       </div>
       </div>
-    
+    </div>
+
     <!-- Copyright -->
-  
+
   </footer>
   <!-- Footer -->
 
@@ -306,17 +307,17 @@
 
 
 
-    <script src="main.js"></script>
-    <!--MI Js-->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
-    </script>
+  <script src="main.js"></script>
+  <!--MI Js-->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
 
 </body>
 
